--- a/public/css/team.css
+++ b/public/css/team.css
@@ -7,7 +7,7 @@
     text-align: left;
 }
 
-.our-team-heading > h4 {
+.our-team-heading>h4 {
     font-weight: var(--heading-font-weight-normal);
 }
 
@@ -66,9 +66,9 @@
 .team-member-description {
     line-height: 1.5;
     text-align: justify;
-    text-justify: inter-word;
-    /* border: 1px solid var(--primary-red); */
-    /* text-overflow: justify; */
+    text-justify: justify;
+    word-wrap: break-word;
+    word-spacing: -2px;
     padding: 2em;
 }
 
@@ -76,9 +76,51 @@
     .team-container {
         flex-direction: column;
     }
-
     .team-member-card {
         width: 75%;
         margin: 1em 0;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .team-container {
+        flex-direction: column;
+    }
+    .team-member-card {
+        width: 100%;
+    }
+    .team-container {
+        justify-content: space-around;
+        align-items: center;
+        width: 100%;
+        margin: 2rem 0;
+        padding: 0 0.1em;
+    }
+    .team-member-description {
+        line-height: 1.5;
+        text-align: justify;
+        text-justify: justify;
+        word-wrap: break-word;
+        /* word-spacing: -2px; */
+        padding: 1em;
+    }
+    .team-member-image img {
+        width: 30%;
+        height: 30%;
+        border: 2px solid var(--primary-red);
+        border-radius: 50%;
+    }
+    
+    .team-member-name {
+        font-weight: 700;
+        font-size: 1.4em;
+        margin: 0.2em 0 0.5em 0;
+    }
+
+    .team-member-position {
+        font-style: normal;
+        font-weight: 300;
+        font-size: 1.2em;
+        text-align: center;
     }
 }
